# traffic-flow

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  tmp.pyproject.toml
.github/workflows/: python-package.yml
data/: network_1.xlsx
mtsim/: __init__.py  mtm.py  mtm_ig.py  mtm_ig_directed.py  mtm_ig_optimisation.py  mtm_ig_undirected.py  mtm_nx.py  mtm_nx_directed.py  mtm_nx_undirected.py  parameters.py  sample_networks.py
mtsim/examples/: network_1.xlsx  network_2.xlsx  network_2_directed.xlsx
testing/: network_test.ipynb  run_all_methods_ig.ipynb  run_all_methods_nx.ipynb  run_optimisation.ipynb  test_4_step.py  test_all_methods_ig.ipynb  test_ig_directed.py  test_inputs.py  test_optimisation.py  test_pipelines.py  test_pipelines_undirected.py  testing_networks.ipynb
tests/: test_mtm_pipelines.py
traffic_flow/: __init__.py  mtm.py  mtm_ig_optimisation.py  mtm_ig_undirected.py  parameters.py  sample_networks.py  utils.py
traffic_flow/examples/: network_1_undirected.xlsx  network_2_undirected.xlsx
