[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-flow"
version = "0.2.0"
description = "Macroscopic transport modelling; forecasting future traffic flows on new roads"
readme = "README.md"
authors = [
    { name = "Peter Vanya", email = "peter.vanya@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["traffic", "flow", "modelling", "prediction", "optimisation", "transport"]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.2",
    "numpy-financial>=1.0",
    "python-igraph>=0.8",
    "networkx==2.0",
    "openpyxl>=3.0.10",
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools]
package-dir = {"" = "traffic_flow"}

[project.urls]
Homepage = "https://github.com/petervanya/traffic-flow"
